# ocaml-toon

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  toon.opam
.github/workflows/: ci.yml
bench/: dune  main.ml
benchmarks/: main.ml
dev-tools.locks/ocaml-lsp-server/: lock.dune
dev-tools.locks/ocamlformat/: lock.dune
dune.lock/: flexdll.0.44.pkg  lock.dune  ocaml-compiler.5.4.0.pkg  system-mingw.1.pkg  testo-diff.0.2.0.pkg  testo-util.0.2.0.pkg  testo.0.2.0.pkg
lib/: dune  toon.ml  toon.mli  toon_decode.ml  toon_encode.ml  toon_parse.ml  toon_print.ml
test/: dune  test.ml  test_parse.ml  test_print.ml  test_roundtrip.ml  test_spec.ml
